sidebar collapse pixel correction

--- a/htdocs/src/ui_map.css
+++ b/htdocs/src/ui_map.css
@@ -305,7 +305,7 @@
 .collapseSidebar {
 	height: 12px;
 	width: 8px;
-	right: 347px;
+	right: 345px;
 	position: absolute;
 	
 	padding: 16px 1px;
